[gd_scene load_steps=5 format=3 uid="uid://dhjfbrhsaeij1"]

[ext_resource type="Texture2D" uid="uid://dama2y7dlfn0o" path="res://assets/sprites/platforms.png" id="1_ky5tp"]
[ext_resource type="Script" path="res://scripts/platform.gd" id="1_ns3q0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_als1f"]
size = Vector2(30, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2wcg5"]
size = Vector2(30, 12)

[node name="GrassPlatform" type="AnimatableBody2D"]
script = ExtResource("1_ns3q0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ky5tp")
region_enabled = true
region_rect = Rect2(16, 0, 32, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_als1f")
one_way_collision = true

[node name="PlatformArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformArea"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_2wcg5")
debug_color = Color(0.988651, 0, 0.29957, 0.42)

[connection signal="body_entered" from="PlatformArea" to="." method="_on_platform_area_body_entered"]
[connection signal="body_exited" from="PlatformArea" to="." method="_on_platform_area_body_exited"]
